# capnp-stub-generator

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  test_init_fix.py  test_interface_param_runtime.py
capnp-stubs/capnp/: __init__.pyi
capnp_stub_generator/: __main__.py  capnp_types.py  cli.py  helper.py  run.py  scope.py  writer.py  writer_dto.py
src/capnp-stubs/lib/: capnp.pyi
src/capnp_stub_generator/: capnp_types.py  capnpc_plugin.py  cli.py  helper.py  run.py  scope.py  writer.py  writer_dto.py
src/capnp_stub_generator/schema/: schema_capnp.pyi
src/pycapnp-base-stubs/: _internal.pyi
src/pycapnp-base-stubs/lib/: capnp.pyi
src/pycapnp_base_stubs/lib/: capnp.pyi
src/schema_capnp/: __init__.pyi  schema_capnp.pyi
tests/: __init__.py  conftest.py  conftest.py.backup  demo_improvements.py  demo_nested_dict_init.py  demo_new_message_usage.py  new_reference.py  ref_dummy_capnp.pyi_nocheck  test_addressbook_typing.py  test_advanced_complex_lists.py  test_advanced_generics_anypointer_interface.py  test_advanced_groups.py  test_advanced_name_annotations.py  test_advanced_unions.py  test_advanced_versioning_constants.py  test_any_pointer_setters.py  test_anypointer_runtime.py  test_anypointer_type_surfaces.py  test_basic_low.py  test_bundled_base_stubs.py  test_calculator_baseline.py  test_calculator_client_typing.py  test_calculator_nesting.py  test_capnp_stubs.py  test_cast_as_generic_issue.py  test_cli.py  test_context_method_variants.py  test_dict_initialization_all_levels.py  test_direct_return_experiments.py  test_direct_struct_params.py  test_direct_struct_return.py  test_directory_structure.py  test_dummy_constants_versions_names.py  test_dummy_enums_and_all_types.py  test_dummy_groups_and_nested.py  test_dummy_lists_and_defaults.py  test_dummy_schema.py  test_dummy_unions.py  test_enum_literal_validation.py  test_enum_type_alias.py  (+56 more)
tests/examples/addressbook/: addressbook.py
tests/examples/calculator/: async_calculator_client.py  async_calculator_server.py  calculator.capnp
tests/examples/climate/: climate.py
tests/examples/identifiable/: common.capnp  identifiable.py
tests/schemas/: fbp_simple.capnp  import_base.capnp  interfaces.capnp  list_result.capnp  nested.capnp  primitives.capnp  repro_group_struct.capnp  unions.capnp
tests/schemas/basic/: advanced_features.capnp  any_pointer.capnp  basic_low.capnp  channel.capnp  fbp_channel.capnp  generic_interface.capnp  import_user.capnp  mid_features.capnp  runtime_test.capnp  struct_return.capnp
tests/schemas/examples/addressbook/: addressbook.py
tests/schemas/examples/calculator/: async_calculator_client.py  async_calculator_server.py
tests/schemas/examples/fbp_nested_callback/: fbp_nested_callback.capnp  fbp_nested_callback_example.py
tests/schemas/examples/registry/: registry_with_embedded.py  registry_with_load.py
tests/schemas/examples/restorer/: restorer.capnp  restorer_client.py  restorer_server.py
tests/schemas/examples/single_value/: single_value.capnp  single_value_client.py  single_value_server.py
tests/schemas/zalfmas/: climate.capnp  cluster_admin_service.capnp  common.capnp  config.capnp  crop.capnp  fbp.capnp  field_exp_data.capnp  frontend.capnp  geo.capnp  grid.capnp  jobs.capnp  management.capnp  model.capnp  persistence.capnp  registry.capnp  service.capnp  soil.capnp  storage.capnp
tests/schemas/zalfmas_no_annotations/: fbp.capnp
tests/zalfmas_capnp_schemas/: __init__.py  fbp.capnp
typings/addressbook/addressbook_capnp/: __init__.py  __init__.pyi
typings/addressbook/addressbook_capnp/types/: __init__.py  __init__.pyi  _all.py  _all.pyi  builders.py  builders.pyi  clients.py  clients.pyi  common.py  common.pyi  contexts.py  contexts.pyi  enums.py  enums.pyi  lists.py  lists.pyi  modules.py  modules.pyi  readers.py  readers.pyi  requests.py  requests.pyi  schemas.py  schemas.pyi  servers.py  servers.pyi
typings/calculator/calculator_capnp/: __init__.py  __init__.pyi
typings/calculator/calculator_capnp/types/: __init__.py  __init__.pyi  _all.py  _all.pyi  builders.py  builders.pyi  clients.py  clients.pyi  common.py  common.pyi  contexts.py  contexts.pyi  enums.py  enums.pyi  lists.py  lists.pyi  modules.py  modules.pyi  readers.py  readers.pyi  requests.py  requests.pyi  schemas.py  schemas.pyi  servers.py  servers.pyi
typings/capnp-stubs/lib/: capnp.pyi
typings/fbp_nested_callback/fbp_nested_callback_capnp/: __init__.py  __init__.pyi
typings/fbp_nested_callback/fbp_nested_callback_capnp/types/: __init__.py  __init__.pyi  _all.py  _all.pyi  builders.py  builders.pyi  clients.py  clients.pyi  common.py  common.pyi  contexts.py  contexts.pyi  enums.py  enums.pyi  lists.py  lists.pyi  modules.py  modules.pyi  readers.py  readers.pyi  requests.py  requests.pyi  schemas.py  schemas.pyi  servers.py  servers.pyi
typings/restorer/restorer_capnp/: __init__.py  __init__.pyi
typings/restorer/restorer_capnp/types/: __init__.py  __init__.pyi  _all.py  _all.pyi  builders.py  builders.pyi  clients.py  clients.pyi  common.py  common.pyi  contexts.py  contexts.pyi  enums.py  enums.pyi  lists.py  lists.pyi  modules.py  modules.pyi  readers.py  readers.pyi  requests.py  requests.pyi  schemas.py  schemas.pyi  servers.py  servers.pyi
typings/schema_capnp/: __init__.py
typings/single_value/single_value_capnp/: __init__.py  __init__.pyi
typings/single_value/single_value_capnp/types/: __init__.py  __init__.pyi  _all.py  _all.pyi  builders.py  builders.pyi  clients.py  clients.pyi  common.py  common.pyi  contexts.py  contexts.pyi  enums.py  enums.pyi  lists.py  lists.pyi  modules.py  modules.pyi  readers.py  (+7 more)
(+45 files in other folders)
