[project]
name = "capnp-stub-generator"
version = "2.1.1"
description = "Cap'n Proto stub generator"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Adrian Figueroa", email = "adrian.figueroa@metirionic.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "pycapnp>=2.2.1,<3.0.0",
  "vulture (>=2.14,<3.0)",
  "capnp-stubs @ file:///home/vdlugosch/Zalf/zalf-rpm/mas/pycapnp-stubs",
]

[project.scripts]
capnp-stub-generator = "capnp_stub_generator.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Example for referencing local packages in editable mode: uncomment these lines while keeping the
# above `project` table. If the line for the package in the dependencies section is commented out
# it will have no effect.

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
pytest = ">=8.4.2,<9.0.0"
pyright = ">=1.1.407,<2.0.0"

[tool.poetry.dependencies]
capnp-stubs = { develop = true }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude generated directories from test collection
norecursedirs = [".*", "_generated*", "*.egg", "dist", "build"]
