[project]
name = "capnp-stub-generator"
version = "2.1.1"
description = "Cap'n Proto stub generator"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Adrian Figueroa", email = "adrian.figueroa@metirionic.com" },
  { name = "Vincent Dlugosch", email = "vincent.dlugosch@zalf.de" },
]
maintainers = [
  { name = "Vincent Dlugosch", email = "vincent.dlugosch@zalf.de" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
  "pycapnp>=2.2.1,<3.0.0",
  "vulture (>=2.14,<3.0)",
  "pyright (>=1.1.407,<2.0.0)",
  "deadcode (>=2.4.1,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/zalf-rpm/capnp-stub-generator"
Repository = "https://github.com/zalf-rpm/capnp-stub-generator"
Issues = "https://github.com/zalf-rpm/capnp-stub-generator/issues"

[project.scripts]
capnp-stub-generator = "capnp_stub_generator.cli:main"

[tool.setuptools]
packages = ["capnp_stub_generator"]

[tool.setuptools.package-data]
capnp_stub_generator = ["resources/capnp-stubs/**/*"]

[tool.poetry]
packages = [
  { include = "capnp-stubs", from = "src" },
  { include = "capnp_stub_generator", from = "src" },
  { include = "tests" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Example for referencing local packages in editable mode: uncomment these lines while keeping the
# above `project` table. If the line for the package in the dependencies section is commented out
# it will have no effect.

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
pytest = ">=9.0.0,<10.0.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude generated directories from test collection
norecursedirs = [".*", "_generated*", "*.egg", "dist", "build"]
