[project]
name = "capnp-stub-generator"
version = "2.1.1"
description = "Cap'n Proto stub generator"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Adrian Figueroa", email = "adrian.figueroa@metirionic.com" },
  { name = "Vincent Dlugosch", email = "vincent.dlugosch@zalf.de" },
]
maintainers = [
  { name = "Vincent Dlugosch", email = "vincent.dlugosch@zalf.de" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
  "pycapnp>=2.2.1,<3.0.0",
  "vulture >=2.14,<3.0",
  "pyright >=1.1.407,<2.0.0",
  "deadcode >=2.4.1,<3.0.0",
  "ruff >=0.15,<0.16.0",
  "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://github.com/zalf-rpm/capnp-stub-generator"
Repository = "https://github.com/zalf-rpm/capnp-stub-generator"
Issues = "https://github.com/zalf-rpm/capnp-stub-generator/issues"

[project.scripts]
capnpc-python = "capnp_stub_generator.capnpc_plugin:main"

[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "capnp_stub_generator",
  "schema_capnp",
  "pycapnp_base_stubs",
  "pycapnp_base_stubs.*",
]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.capnp", "*.pyi", "py.typed", "LICENSE", "lib/*.pyi"]


[tool.pyright]
reportPropertyTypeMismatch = "none"
include = ["src", "tests"]
extraPaths = ["src", "tests/_generated/basic"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["typings/capnp-stubs", "tests/schemas/examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A003",
  "E501",
  "D203",
  "D213",
  "COM812",
  "S101",
  "S603",
  "S607",
  "T201",
  "PYI021",
  "PYI016",
  "ANN001",
  "ANN201",
  "N802",
  "SLF001",
  "G004",
  "ANN401",
  "INP001",
  "D103",
  "D102",
  "ERA001",
  "PTH123",
  "BLE001",
  "PLR2004",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".*", "_generated*", "*.egg", "dist", "build"]
